# nfl_outcome_predictor

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-data-exploration.ipynb  02-feature-engineering.ipynb  03-model-training.ipynb  Final_Deliverable.ipynb  feature_processing.ipynb  model_train.ipynb  nfl_game_features_2002_2024.csv  nfl_logistic_model_v1.pkl  nfl_production_model_2002_2024.pkl  nfl_test_data_2021_2024.csv  nfl_train_data_2002_2020.csv  train_test_split.ipynb
